# cs480_steelworks

./: .env.example  .env.test.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
db/: sample_queries.sql  schema.sql  seed.sql
docs/: data_design.md
scripts/: check_gpl_licenses.py
src/steelworks/: __init__.py  app.py  database.py  models.py  orm_models.py  repository.py  services.py  utils.py
tests/: conftest.py  test_models.py  test_repository.py  test_services.py  test_utils.py
tests/e2e/: conftest.py  test_dashboard_e2e.py
tests/integration/: test_operations_integration.py
