[tool.poetry]
name = "steelworks"
version = "0.1.0"
description = "Scaffold for SteelWorks operations reporting dashboard"
authors = ["Ritik0400 <ritik.shrivastava1704@gmail.com>"]

packages = [
    { include = "steelworks", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11 || ^3.12 || ^3.13"
sqlalchemy = "^2.0.43"
streamlit = "^1.49.1"
python-dotenv = "^1.1.1"
pg8000 = "^1.31.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.15.2"
mypy = "^1.19.1"
pytest-cov = "^7.0.0"
pre-commit = "^4.5.1"
pip-licenses = "^5.0.0"
pytest-playwright = "^0.7.1"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
